# blade-pm

./: .gitignore  Makefile.am  NEWS  README  configure.ac.in
bar-plugins/power-manager-plugin/: power-manager-button.c  power-manager-button.h  scalemenuitem.c
bar-plugins/power-manager-plugin/lxde/: Makefile.am  lxde-power-manager-plugin.c
bar-plugins/power-manager-plugin/lxde-0.7/: lxde-power-manager-plugin.c
bar-plugins/power-manager-plugin/xfce/: Makefile.am  blade-pm-plugin.c  power-manager-plugin.desktop.in.in
common/: Makefile.am  blpm-brightness.c  blpm-brightness.h  blpm-common.c  blpm-common.h  blpm-config.h  blpm-debug.c  blpm-debug.h  blpm-icons.h  blpm-power-common.c  blpm-power-common.h
data/appdata/: Makefile.am  blade-pm.appdata.xml.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/interfaces/: Makefile.am  blpm-settings.ui
libdbus/: Makefile.am  blpm-dbus-monitor.c  blpm-dbus-monitor.h  blpm-dbus.c  blpm-dbus.h  blpm-unique.c  blpm-unique.h  org.blade.unique.xml
po/: POTFILES.in  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  (+13 more)
settings/: Makefile.am  blade-pm-settings.1  blade-pm-settings.desktop.in  blpm-settings-main.c  blpm-settings.c  blpm-settings.h
src/: Makefile.am  blade-pm.1  blade-pm.desktop.in  blpm-backlight.c  blpm-backlight.h  blpm-battery.c  blpm-battery.h  blpm-blconf.c  blpm-blconf.h  blpm-button.c  blpm-button.h  blpm-console-kit.c  blpm-console-kit.h  blpm-dpms.c  blpm-dpms.h  blpm-errors.c  blpm-errors.h  blpm-inhibit.c  blpm-inhibit.h  blpm-kbd-backlight.c  blpm-kbd-backlight.h  blpm-main.c  blpm-manager.c  blpm-manager.h  blpm-network-manager.c  blpm-network-manager.h  blpm-notify.c  blpm-notify.h  blpm-polkit.c  blpm-polkit.h  blpm-power.c  blpm-power.h  blpm-suspend.c  blpm-suspend.h  blpm-systemd.c  blpm-systemd.h  org.blade.Power.Manager.xml  org.blade.power.policy.in2  org.freedesktop.PowerManagement.xml
