EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/24x24/status

Data_DATA =				\
	blpm-ac-adapter.png		\
	blpm-primary-000.png		\
	blpm-primary-020.png		\
	blpm-primary-040.png		\
	blpm-primary-060.png		\
	blpm-primary-080.png		\
	blpm-primary-100.png		\
	blpm-primary-000-charging.png	\
	blpm-primary-020-charging.png	\
	blpm-primary-040-charging.png	\
	blpm-primary-060-charging.png	\
	blpm-primary-080-charging.png	\
	blpm-primary-100-charging.png	\
	blpm-primary-charged.png		\
	blpm-primary-missing.png
