EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/32x32/status

Data_DATA =				\
	computer.png			\
	input-keyboard.png		\
	input-mouse.png			\
	multimedia-player.png		\
	pda.png				\
	phone.png			\
	tablet.png			\
	video-display.png		\
	blpm-ac-adapter.png		\
	blpm-primary-000.png		\
	blpm-primary-020.png		\
	blpm-primary-040.png		\
	blpm-primary-060.png		\
	blpm-primary-080.png		\
	blpm-primary-100.png		\
	blpm-primary-000-charging.png	\
	blpm-primary-020-charging.png	\
	blpm-primary-040-charging.png	\
	blpm-primary-060-charging.png	\
	blpm-primary-080-charging.png	\
	blpm-primary-100-charging.png	\
	blpm-primary-charged.png		\
	blpm-primary-missing.png		\
	blpm-ups-000.png		\
	blpm-ups-020.png		\
	blpm-ups-040.png		\
	blpm-ups-060.png		\
	blpm-ups-080.png		\
	blpm-ups-100.png		\
	blpm-brightness-lcd.png
