EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/scalable/status

Data_DATA =				\
	computer.svg			\
	keyboard.svg			\
	mouse.svg			\
	multimedia-player.svg		\
	pda.svg				\
	phone.svg			\
	tablet.svg			\
	video-display.svg		\
	blpm-ac-adapter.svg		\
	blpm-primary-000.svg		\
	blpm-primary-020.svg		\
	blpm-primary-040.svg		\
	blpm-primary-060.svg		\
	blpm-primary-080.svg		\
	blpm-primary-100.svg		\
	blpm-primary-000-charging.svg	\
	blpm-primary-020-charging.svg	\
	blpm-primary-040-charging.svg	\
	blpm-primary-060-charging.svg	\
	blpm-primary-080-charging.svg	\
	blpm-primary-100-charging.svg	\
	blpm-primary-charged.svg		\
	blpm-primary-missing.svg		\
	blpm-ups-000.svg		\
	blpm-ups-020.svg		\
	blpm-ups-040.svg		\
	blpm-ups-060.svg		\
	blpm-ups-080.svg		\
	blpm-ups-100.svg		\
	blpm-brightness-keyboard.svg	\
	blpm-brightness-lcd.svg
